Bug 1475485, @title tooltips should work also inside ShadowDOM, r=mrbkap